force-app/main/default/objects/SMS__c/fields/Account_Balance_Processed__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Balance Processed?</label>
    <type>Checkbox</type>
</CustomField>