force-app/main/default/objects/SMS__c/fields/Amount_Processed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Processed?</label>
    <type>Checkbox</type>
</CustomField>