force-app/main/default/objects/SMS__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Beneficiary__c</referenceTo>
    <relationshipLabel>SMS</relationshipLabel>
    <relationshipName>SMS</relationshipName>
    <type>Lookup</type>
</CustomField>