force-app/main/default/objects/SMS__c/fields/Beneficiary_Processed__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiary Processed?</label>
    <type>Checkbox</type>
</CustomField>