force-app/main/default/objects/SMS__c/fields/Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Type__c</fullName>
    <defaultValue>&quot;Other&quot;</defaultValue>
    <label>Beneficiary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>