force-app/main/default/objects/SMS__c/fields/Finance_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Account</label>
    <referenceTo>Finance_Account__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>