force-app/main/default/objects/SMS__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <referenceTo>Finance_Account__c</referenceTo>
    <relationshipLabel>SMS (From Account)</relationshipLabel>
    <relationshipName>SMS</relationshipName>
    <type>Lookup</type>
</CustomField>