force-app/main/default/objects/SMS__c/fields/Masked_Content__c.field-meta.xml
<CustomField>
    <fullName>Masked_Content__c</fullName>
    <label>Masked Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>