force-app/main/default/objects/SMS__c/fields/Original_Content__c.field-meta.xml
<CustomField>
    <fullName>Original_Content__c</fullName>
    <label>Original Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>