force-app/main/default/objects/SMS__c/fields/Payment_Info_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Info_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Info Processed?</label>
    <type>Checkbox</type>
</CustomField>