force-app/main/default/objects/SMS__c/fields/Payment_Via__c.field-meta.xml
<CustomField>
    <fullName>Payment_Via__c</fullName>
    <label>Payment Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>DEBITCARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>