force-app/main/default/objects/SMS__c/fields/Processing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Processing_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing Completed?</label>
    <type>Checkbox</type>
</CustomField>