force-app/main/default/objects/SMS__c/fields/Processing_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Processing_Completed_At__c</fullName>
    <label>Processing Completed At</label>
    <type>DateTime</type>
</CustomField>