force-app/main/default/objects/SMS__c/fields/Related_To_Investment__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Investment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related To Investment?</label>
    <type>Checkbox</type>
</CustomField>