force-app/main/default/objects/SMS__c/fields/SA_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>SA_Available_Balance__c</fullName>
    <label>SA Available Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>