force-app/main/default/objects/SMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Content__c</columns>
    <columns>Created_From__c</columns>
    <columns>Device__c</columns>
    <columns>Received_At__c</columns>
    <columns>External_Id__c</columns>
    <columns>Sender__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>