force-app/main/default/objects/SMS__c/listViews/Error_SMS_List.listView-meta.xml
<ListView>
    <fullName>Error_SMS_List</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Balance_Update__c</columns>
    <columns>Create_Transaction__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Finance_Account__c</columns>
    <columns>Content__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Create_Transaction__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Finance_Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Credit,Debit</value>
    </filters>
    <filters>
        <field>Content__c</field>
        <operation>notContain</operation>
        <value>OTP,otp,verification code</value>
    </filters>
    <filters>
        <field>Content__c</field>
        <operation>notContain</operation>
        <value>Acct XX360 is credited with</value>
    </filters>
    <label>Error SMS List</label>
</ListView>