force-app/main/default/objects/SMS__c/listViews/Expenso_SMS_List.listView-meta.xml
<ListView>
    <fullName>Expenso_SMS_List</fullName>
    <columns>NAME</columns>
    <columns>Balance_Update__c</columns>
    <columns>Create_Transaction__c</columns>
    <columns>Finance_Account__c</columns>
    <columns>Sender__c</columns>
    <columns>Device__c</columns>
    <columns>External_Id__c</columns>
    <columns>Received_At__c</columns>
    <columns>Content__c</columns>
    <columns>Created_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>Expenso SMS List</label>
</ListView>